--- a/staging/index.html
+++ b/staging/index.html
@@ -195,7 +195,7 @@
 				<rect width="32" height="32" rx="4" fill="#0273B3"/>
 				<path d="M7 23l7-14c.3-.7 1.1-1 1.8-.7.7.3 1 1.1.7 1.8l-7 14c-.3.7-1.1 1-1.8.7-.7-.3-1-1.1-.7-1.8Zm6 2h10c.6 0 1-.4 1-1s-.4-1-1-1H13c-.6 0-1 .4-1 1s.4 1 1 1Z" fill="#fff"/>
 			  </svg>
-			  PowerShell Gallery
+			  PS Gallery
 			</a>
 		  
         <!-- Support -->
