--- a/staging/index.html
+++ b/staging/index.html
@@ -9,28 +9,28 @@
 <link href="images/favicon_theme.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<header>
-<div class="container nav">
-<a class="brand" href="#top">
-<div class="logo">
-<img alt="VPASModule logo" src="images/VpasModuleLOGONoText_theme.png"/>
-</div>
-<div>
-<div class="name">VpasModule</div>
-<div class="muted">PowerShell module for CyberArk APIs</div>
-</div>
-</a>
-<nav class="navlinks">
-<a href="install.html">Install</a>
-<a href="commands.html">Commands</a>
-<a href="scriptbuilder.html">ScriptBuilder</a>
-<a href="common.html">Common Scripts</a>
-<a href="updates.html">Updates</a>
-<a href="about.html">About</a>
-<a href="https://docs.cyberark.com" rel="noopener" target="_blank">Docs</a>
-</nav>
-</div>
-</header>
+<header style="background-color:#000;">
+	  <div class="container nav" style="align-items:center; padding:8px 0;">
+		<a class="brand" href="index.html" style="display:flex;align-items:center;gap:50px;text-decoration:none;">
+		  <div class="logo" style="background:none;padding:0;">
+			<img src="images/VpasModuleLOGONoText_theme.png" alt="VPASModule logo" style="height:68px;display:block;">
+		  </div>
+		  <div style="margin-left:10px;">
+			<div class="name" style="font-weight:700;color:#fff;">VpasModule</div>
+			<div class="muted" style="font-size:12px;color:#ccc;">PowerShell module for CyberArk APIs</div>
+		  </div>
+		</a>
+		<nav class="navlinks">
+		  <a href="install.html">Install</a>
+		  <a href="commands.html">Commands</a>
+		  <a href="scriptbuilder.html">ScriptBuilder</a>
+		  <a href="common.html">Common Scripts</a>
+		  <a href="updates.html">Updates</a>
+		  <a href="about.html">About</a>
+		  <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
+		</nav>
+	  </div>
+	</header>
 <main id="top">
 <!-- Hero -->
 <section class="hero">
