--- a/staging/install.html
+++ b/staging/install.html
@@ -72,7 +72,7 @@
 </div>
 </section>
 <section class="section">
-<div class="container grid grid-2"><article class="card" id="gallery">
+<div class="container grid grid-2"><article class="card" id="gallery" style="width:90%; margin: auto">
 <div class="card-body">
 <h2>Automatic • PowerShell Gallery</h2>
 <p class="muted">Recommended for most users (PowerShell 7+ or 5.1).</p>
@@ -118,7 +118,7 @@
 </li>
 </ol>
 </div>
-</article><article class="card" id="github">
+</article><article class="card" id="github" style="width:90%; margin: auto">
 <div class="card-body">
 <h2>Manual • GitHub ZIP</h2>
 <p class="muted">Useful for offline installs or testing specific commits.</p>
