--- a/staging/install.html
+++ b/staging/install.html
@@ -97,8 +97,8 @@
 </button>
 <pre><code id="c1s">Install-Module VpasModule -Scope CurrentUser</code></pre>
 </div>
-<img alt="Automatic install step 2" src="images/AutomaticInstall02.gif">
-</img></li>
+<img alt="Automatic install step 2" src="images/AutomaticInstall02.gif"/>
+</li>
 <br/>
 <li class="install-step">
                 Import and verify
@@ -131,12 +131,12 @@
 <a class="btn btn-xs" href="https://github.com/vmelamed5/VpasModule" rel="noopener" target="_blank">Open GitHub</a>
 <img alt="Manual install step 1" src="images/ManualInstall02.gif"/>
 </li>
-<br>
+<br/>
 <li class="install-step">
                 Extract the ZIP and locate the <strong>VpasModule</strong> folder.
                 <img alt="Manual install step 2" src="images/ManualInstall03.gif"/>
 </li>
-<br/>
+<br>
 <li class="install-step">
                 Move the folder into a PowerShell module path
                 <div class="code">
@@ -178,25 +178,84 @@
 <h2 style="margin-top:0">Troubleshooting</h2>
 <p class="muted">If you hit an error, please view some common FAQs below. If none apply and this is an error with the module itself, please open an issue via GitHub or contact me</p>
 <div class="pills">
-  <a class="pill" href="https://github.com/vmelamed5/VpasModule/issues" rel="noopener" target="_blank">
-    <svg fill="currentColor" height="16" style="margin-right:6px;vertical-align:middle;" viewBox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
-      <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.29 9.41 7.86 10.94.58.11.79-.25.79-.56v-2.02c-3.2.7-3.87-1.39-3.87-1.39-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.77 2.72 1.26 3.38.96.1-.76.41-1.26.74-1.55-2.55-.29-5.23-1.28-5.23-5.69 0-1.26.45-2.3 1.19-3.12-.12-.29-.52-1.45.11-3.01 0 0 .97-.31 3.19 1.19a11.1 11.1 0 0 1 5.8 0c2.22-1.5 3.18-1.19 3.18-1.19.64 1.56.24 2.72.12 3.01.74.82 1.19 1.86 1.19 3.12 0 4.42-2.69 5.39-5.25 5.67.42.36.79 1.08.79 2.19v3.24c0 .31.21.68.8.56A10.96 10.96 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z"></path>
-    </svg>
+<a class="pill" href="https://github.com/vmelamed5/VpasModule/issues" rel="noopener" target="_blank">
+<svg fill="currentColor" height="16" style="margin-right:6px;vertical-align:middle;" viewbox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
+<path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.29 9.41 7.86 10.94.58.11.79-.25.79-.56v-2.02c-3.2.7-3.87-1.39-3.87-1.39-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.77 2.72 1.26 3.38.96.1-.76.41-1.26.74-1.55-2.55-.29-5.23-1.28-5.23-5.69 0-1.26.45-2.3 1.19-3.12-.12-.29-.52-1.45.11-3.01 0 0 .97-.31 3.19 1.19a11.1 11.1 0 0 1 5.8 0c2.22-1.5 3.18-1.19 3.18-1.19.64 1.56.24 2.72.12 3.01.74.82 1.19 1.86 1.19 3.12 0 4.42-2.69 5.39-5.25 5.67.42.36.79 1.08.79 2.19v3.24c0 .31.21.68.8.56A10.96 10.96 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z"></path>
+</svg>
     GitHub Issues
   </a>
-  
-  <a class="pill" href="mailto:vpasmodule@gmail.com">
-	  <svg fill="currentColor" height="16" style="margin-right:6px;vertical-align:middle;" viewBox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
-		<path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 
+<a class="pill" href="mailto:vpasmodule@gmail.com">
+<svg fill="currentColor" height="16" style="margin-right:6px;vertical-align:middle;" viewbox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
+<path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 
 				 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 
 				 2-2zm0 2v.01L12 13 20 6.01V6H4zm0 
-				 12h16V8l-8 7-8-7v10z"/>
-	  </svg>
+				 12h16V8l-8 7-8-7v10z"></path>
+</svg>
 	  Contact Me
 	</a>
-</div><br><div class="faq-wrap"><h3 style="margin:8px 0 6px">FAQs</h3>
+</div><br/><div class="faq-wrap"><h3 style="margin:8px 0 6px">FAQs</h3>
 <p class="muted"><b>*Please note:</b> The FAQs below are suggestions and should be carefully reviewed before running any commands. If you are on a corporate or managed machine, always confirm with your organization’s security policies before making changes.</p>
-<details class="faq"><summary>Why can’t I download from PSGallery?</summary><div class="faq-body">Common culprits:<br/>- No internet or blocked by firewall/proxy<br/>- PSGallery repo missing or untrusted (`Get-PSRepository`)<br/>- TLS too old (force TLS 1.2)<br/>- NuGet provider missing/outdated<br/>- Insufficient permissions for AllUsers install<br/>- Temporary PSGallery outage/throttling</div></details><details class="faq"><summary>How do I check if PSGallery is registered and trusted?</summary><div class="faq-body"><div class="code"><pre><code>Get-PSRepository<br/>Unregister-PSRepository -Name PSGallery -ErrorAction SilentlyContinue<br/>Register-PSRepository -Default<br/>Set-PSRepository -Name PSGallery -InstallationPolicy Trusted</code></pre></div></div></details><details class="faq"><summary>How to enable TLS 1.2?</summary><div class="faq-body">PSGallery enforces TLS 1.2+.<br/><div class="code"><pre><code>[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12</code></pre></div></div></details><details class="faq"><summary>NuGet provider errors—what should I do?</summary><div class="faq-body">PowerShellGet relies on NuGet to fetch packages.<br/><div class="code"><pre><code>Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force</code></pre></div></div></details><details class="faq"><summary>`Install-Module` fails but `Find-Module` works—why?</summary><div class="faq-body">Often permissions.<br/><div class="code"><pre><code>Install-Module -Name VpasModule -Scope CurrentUser -Force -AllowClobber -Verbose</code></pre></div></div></details><details class="faq"><summary>Module installed but not found on import</summary><div class="faq-body">Check your module paths and installed copies.<br/><div class="code"><pre><code>$env:PSModulePath -split ';'<br/>Get-Module -Name VpasModule -ListAvailable | Select Name,Version,ModuleBase</code></pre></div></div></details><details class="faq"><summary>Files are 'blocked' and import fails</summary><div class="faq-body">Unblock downloaded files.<br/><div class="code"><pre><code>$mod = (Get-Module -ListAvailable VpasModule | Sort Version -Descending | Select -First 1).ModuleBase<br/>Get-ChildItem -Path $mod -Recurse | Unblock-File</code></pre></div></div></details><details class="faq"><summary>Could execution policy be blocking it?</summary><div class="faq-body">Check and temporarily bypass (current process only):<br/><div class="code"><pre><code>Get-ExecutionPolicy -List<br/>Set-ExecutionPolicy -Scope Process Bypass -Force</code></pre></div></div></details><details class="faq"><summary>Version / architecture compatibility</summary><div class="faq-body">Some modules target specific editions/bitness.<br/><div class="code"><pre><code>$PSVersionTable.PSEdition   # Desktop (5.1) vs Core (7+)<br/>[Environment]::Is64BitProcess</code></pre></div><br/>Try the matching PowerShell (x64 vs x86) or version.</div></details><details class="faq"><summary>Multiple copies or conflicting module names</summary><div class="faq-body">PowerShell loads the first match in PSModulePath. Import a specific path:<br/><div class="code"><pre><code>Get-Module -Name VpasModule -ListAvailable<br/>Import-Module 'C:\Path\To\Module\VpasModule.psm1' -Force -Verbose</code></pre></div></div></details><details class="faq"><summary>Fixing a corrupted or partial install</summary><div class="faq-body">Remove and reinstall:<br/><div class="code"><pre><code>Uninstall-Module -Name VpasModule -AllVersions -Force<br/>Install-Module -Name VpasModule -Scope CurrentUser -Force</code></pre></div></div></details><details class="faq"><summary>Manual install when `Install-Module` fails</summary><div class="faq-body">Save + import directly:<br/><div class="code"><pre><code>Save-Module -Name VpasModule -Repository PSGallery -Path "$env:TEMP\PSModules" -Force<br/>Import-Module "$env:TEMP\PSModules\VpasModule\&lt;Version&gt;\VpasModule.psm1" -Force -Verbose</code></pre></div></div></details><details class="faq"><summary>Corporate proxy issues</summary><div class="faq-body">Check/configure proxy:<br/><div class="code"><pre><code>netsh winhttp show proxy<br/>$proxy=[System.Net.WebRequest]::DefaultWebProxy<br/>$proxy.Credentials=[System.Net.CredentialCache]::DefaultNetworkCredentials</code></pre></div></div></details></div>
+<details class="faq"><summary>Why can’t I download from PSGallery?</summary><div class="faq-body">Common culprits:<br>- No internet or blocked by firewall/proxy<br/>- PSGallery repo missing or untrusted (`Get-PSRepository`)<br/>- TLS too old (force TLS 1.2)<br/>- NuGet provider missing/outdated<br/>- Insufficient permissions for AllUsers install<br/>- Temporary PSGallery outage/throttling</br></div></details><details class="faq"><summary>How do I check if PSGallery is registered and trusted?</summary><div class="faq-body"><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq1" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq1">Get-PSRepository<br/>Unregister-PSRepository -Name PSGallery -ErrorAction SilentlyContinue<br/>Register-PSRepository -Default<br/>Set-PSRepository -Name PSGallery -InstallationPolicy Trusted</code></pre></div></div></details><details class="faq"><summary>How to enable TLS 1.2?</summary><div class="faq-body">PSGallery enforces TLS 1.2+.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq2" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq2">[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12</code></pre></div></div></details><details class="faq"><summary>NuGet provider errors—what should I do?</summary><div class="faq-body">PowerShellGet relies on NuGet to fetch packages.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq3" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq3">Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force</code></pre></div></div></details><details class="faq"><summary>`Install-Module` fails but `Find-Module` works—why?</summary><div class="faq-body">Often permissions.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq4" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq4">Install-Module -Name VpasModule -Scope CurrentUser -Force -AllowClobber -Verbose</code></pre></div></div></details><details class="faq"><summary>Module installed but not found on import</summary><div class="faq-body">Check your module paths and installed copies.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq5" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq5">$env:PSModulePath -split ';'<br/>Get-Module -Name VpasModule -ListAvailable | Select Name,Version,ModuleBase</code></pre></div></div></details><details class="faq"><summary>Files are 'blocked' and import fails</summary><div class="faq-body">Unblock downloaded files.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq6" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq6">$mod = (Get-Module -ListAvailable VpasModule | Sort Version -Descending | Select -First 1).ModuleBase<br/>Get-ChildItem -Path $mod -Recurse | Unblock-File</code></pre></div></div></details><details class="faq"><summary>Could execution policy be blocking it?</summary><div class="faq-body">Check and temporarily bypass (current process only):<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq7" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq7">Get-ExecutionPolicy -List<br/>Set-ExecutionPolicy -Scope Process Bypass -Force</code></pre></div></div></details><details class="faq"><summary>Version / architecture compatibility</summary><div class="faq-body">Some modules target specific editions/bitness.<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq8" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq8">$PSVersionTable.PSEdition   # Desktop (5.1) vs Core (7+)<br/>[Environment]::Is64BitProcess</code></pre></div><br/>Try the matching PowerShell (x64 vs x86) or version.</div></details><details class="faq"><summary>Multiple copies or conflicting module names</summary><div class="faq-body">PowerShell loads the first match in PSModulePath. Import a specific path:<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq9" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq9">Get-Module -Name VpasModule -ListAvailable<br/>Import-Module 'C:\Path\To\Module\VpasModule.psm1' -Force -Verbose</code></pre></div></div></details><details class="faq"><summary>Fixing a corrupted or partial install</summary><div class="faq-body">Remove and reinstall:<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq10" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq10">Uninstall-Module -Name VpasModule -AllVersions -Force<br/>Install-Module -Name VpasModule -Scope CurrentUser -Force</code></pre></div></div></details><details class="faq"><summary>Manual install when `Install-Module` fails</summary><div class="faq-body">Save + import directly:<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq11" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq11">Save-Module -Name VpasModule -Repository PSGallery -Path "$env:TEMP\PSModules" -Force<br/>Import-Module "$env:TEMP\PSModules\VpasModule\&lt;Version&gt;\VpasModule.psm1" -Force -Verbose</code></pre></div></div></details><details class="faq"><summary>Corporate proxy issues</summary><div class="faq-body">Check/configure proxy:<br/><div class="code"><button aria-label="Copy command" class="copy-icon" data-copy="faq12" title="Copy">
+<svg fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M8 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-8a2 2 0 0 1-2-2V7zm-3 3V6a3 3 0 0 1 3-3h7"></path>
+<rect height="11" rx="2" ry="2" width="11" x="3" y="10"></rect>
+</svg>
+</button><pre><code id="faq12">netsh winhttp show proxy<br/>$proxy=[System.Net.WebRequest]::DefaultWebProxy<br/>$proxy.Credentials=[System.Net.CredentialCache]::DefaultNetworkCredentials</code></pre></div></div></details></div>
 </div>
 </article>
 </div>
