--- a/staging/index.html
+++ b/staging/index.html
@@ -160,7 +160,7 @@
 <!-- Collapsible: Breaking Changes -->
 <details class="chg">
 <summary>Breaking Changes</summary>
-<div class="chg-body muted">None - I actively try to keep it this way 😎</div>
+<div class="chg-body muted">None: I actively try to keep it this way 😎</div>
 </details>
 <!-- Optional: Older releases -->
 <div>
