--- a/staging/about.html
+++ b/staging/about.html
@@ -135,8 +135,8 @@
           <div class="card-body">
 				<div class="card-body cta">
 				  <div>
-					<h3 style="margin:0">Need a feature or found a bug?</h3>
-					<div class="muted">Reach out and I’ll take a look.</div>
+					<h3 style="margin:0; text-align: center;">Need a feature or found a bug?</h3>
+					<div class="muted" style="text-align: center;">Reach out and I’ll take a look.</div>
 				  </div>
 				  <div style="display:flex;gap:8px;flex-wrap:wrap;">
 					<a class="btn btn-chip" href="mailto:vpasmodule@gmail.com">
@@ -150,11 +150,11 @@
 					<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.29 9.41 7.86 10.94.58.11.79-.25.79-.56v-2.02c-3.2.7-3.87-1.39-3.87-1.39-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.77 2.72 1.26 3.38.96.1-.76.41-1.26.74-1.55-2.55-.29-5.23-1.28-5.23-5.69 0-1.26.45-2.3 1.19-3.12-.12-.29-.52-1.45.11-3.01 0 0 .97-.31 3.19 1.19a11.1 11.1 0 0 1 5.8 0c2.22-1.5 3.18-1.19 3.18-1.19.64 1.56.24 2.72.12 3.01.74.82 1.19 1.86 1.19 3.12 0 4.42-2.69 5.39-5.25 5.67.42.36.79 1.08.79 2.19v3.24c0 .31.21.68.8.56A10.96 10.96 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z"/></svg>
 					Open an Issue</a>
 				  </div>
-				</div>
+				
 				<div class="card-body" style="padding-top:0">
 				  <div class="divider" style="margin:4px 0 12px;"></div>
-				  <h3 style="margin:0 0 8px;">Support the project!</h3>
-				  <div class="muted">Please consider donating 😎</div>
+				  <h3 style="margin:0; text-align: center;">Support the project!</h3>
+				  <div class="muted" style="text-align: center;">Please consider donating 😎</div>
 				  <div class="donate-row">
 					<a class="btn btn-chip" href="https://buymeacoffee.com/vmelamed5" target="_blank" rel="noopener" aria-label="Buy Me a Coffee (add your link)">
 					  <img src="images/BuyMeACoffee.png" alt="Buy me a coffee">
@@ -171,6 +171,7 @@
 				  </div>
 				</div>
           </div>
+		  </div>
         </aside>
       </div>
 
