--- a/staging/updates.html
+++ b/staging/updates.html
@@ -22,6 +22,7 @@
     </a>
 	<button class="menu-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="mobilemenu"><svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4 7h16v2H4V7zm0 5h16v2H4v-2zm0 5h16v2H4v-2z"/></svg></button>
     <nav class="navlinks">
+	  <a href="index.html">Home</a>
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
@@ -35,6 +36,7 @@
 <nav id="mobilemenu" class="mobilemenu" role="navigation" aria-label="Mobile menu">
   <div class="container panel">
     <div class="row">
+	  <a href="index.html">Home</a>
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
