--- a/staging/scriptbuilder.html
+++ b/staging/scriptbuilder.html
@@ -353,6 +353,17 @@
         <div class="muted" style="font-size:12px;color:#ccc;">PowerShell module for CyberArk APIs</div>
       </div>
     </a>
+	
+	<button id="themeToggle" class="theme-btn" aria-label="Toggle color theme" title="Toggle theme">
+	  <!-- Sun shows in light, moon shows in dark -->
+	  <svg class="i-sun" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+		<path fill="currentColor" d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0-6h1v3h-1V2Zm0 17h1v3h-1v-3ZM2 11h3v1H2v-1Zm17 0h3v1h-3v-1ZM4.22 4.22l.7-.7 2.12 2.12-.7.7L4.22 4.22Zm12.74 12.74.7-.7 2.12 2.12-.7.7-2.12-2.12Zm2.12-12.04.7.7-2.12 2.12-.7-.7 2.12-2.12ZM6.34 17.66l.7.7-2.12 2.12-.7-.7 2.12-2.12Z"/>
+	  </svg>
+	  <svg class="i-moon" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+		<path fill="currentColor" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79Z"/>
+	  </svg>
+	</button>
+	
     <button class="menu-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="mobilemenu">
       <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4 7h16v2H4V7zm0 5h16v2H4v-2zm0 5h16v2H4v-2z"/></svg>
     </button>
@@ -417,11 +428,11 @@
                   <input id="pvwa" class="input" placeholder="mypvwa.domain.com" autocomplete="url"/>
                 </div>
                 <div>
-                  <label class="label" for="identityUrl">Identity URL (optional)</label>
+                  <label class="label" for="identityUrl">Identity URL</label>
                   <input id="identityUrl" class="input" placeholder="AA1234.id.cyberark.cloud" autocomplete="url"/>
                 </div>
                 <div>
-                  <label class="label" for="idpLogin">IdP Login Path (optional)</label>
+                  <label class="label" for="idpLogin">IdP Login Path</label>
                   <input id="idpLogin" class="input" placeholder="https://idplogin/app/appName/123abc/..."/>
                 </div>
               </div>
@@ -831,7 +842,8 @@ document.addEventListener('click', function(e){
     }
 
     function renderSet(idx){
-      setTabsEl.querySelectorAll('button').forEach((b,i)=> b.classList.toggle('is-active', i===idx));
+      clearOutput();
+	  setTabsEl.querySelectorAll('button').forEach((b,i)=> b.classList.toggle('is-active', i===idx));
       const set = filteredSets[idx];
       paramFormEl.innerHTML = '';
       const req = (Array.isArray(set.parameters) ? set.parameters.filter(p => !!p.required) : []);
@@ -919,7 +931,8 @@ document.addEventListener('click', function(e){
     if (filteredSets.length) { renderSet(0); }}
 
   select.addEventListener('change', () => {
-    const id = select.value;
+    clearOutput(); 
+	const id = select.value;
     const cmd = findCommand(id);
     if (cmd) renderParamSets(cmd);
   });
@@ -930,6 +943,15 @@ document.addEventListener('click', function(e){
   const outPre = $('#scriptOut');
   const status = $('#genStatus');
   const copyBtn = $('#copyBtn');
+  
+  function clearOutput(){
+    const pre = document.getElementById('scriptOut');
+    const st  = document.getElementById('genStatus');
+    if (pre) pre.textContent = '';
+    if (st)  st.textContent  = '';
+    const cb = document.getElementById('copyBtn');
+    if (cb) cb.classList.remove('copied');
+  }
 
   function quote(v){
     if (v === '' || v === null || v === undefined) return '""';
@@ -1160,6 +1182,36 @@ document.addEventListener('click', function(e){
   if (select.options.length) { select.selectedIndex = 0; const cmd = findCommand(select.value); if (cmd) renderParamSets(cmd); }
 }
 )();
+</script>
+<script>
+(function(){
+  var root = document.documentElement;      // toggles class on <html>
+  var key = 'theme';
+
+  function apply(theme){
+    if (theme === 'light') root.classList.add('theme-light');
+    else root.classList.remove('theme-light');
+  }
+
+  // initial: saved → OS preference → dark
+  var saved = null;
+  try { saved = localStorage.getItem(key); } catch(e){}
+  if (!saved) {
+    try {
+      saved = (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) ? 'light' : 'dark';
+    } catch(e){ saved = 'dark'; }
+  }
+  apply(saved);
+
+  var btn = document.getElementById('themeToggle');
+  if (btn){
+    btn.addEventListener('click', function(){
+      var next = root.classList.contains('theme-light') ? 'dark' : 'light';
+      apply(next);
+      try { localStorage.setItem(key, next); } catch(e){}
+    });
+  }
+})();
 </script>
 </body>
 </html>
