--- a/staging/index.html
+++ b/staging/index.html
@@ -95,10 +95,10 @@
 <p class="muted">Generate and copy a script with values provided by you</p>
 <a class="btn btn-chip" href="scriptbuilder.html">Open</a>
 </article>
-<article class="card card-body" id="common">
+<article class="card card-body">
 <h3>Common Scripts</h3>
 <p class="muted">Curated, copy‑ready scripts for frequent use cases</p>
-<a class="btn btn-primary" href="common.html">Explore</a>
+<a class="btn btn-chip" href="common.html">Explore</a>
 </article>
 <article class="card card-body">
 <h3>Updates &amp; Changelog</h3>
