--- a/commands.html
+++ b/commands.html
@@ -49,7 +49,7 @@
 <a href="install.html">Install</a>
 <a href="commands.html">Commands</a>
 <a href="scriptbuilder.html">ScriptBuilder</a>
-<a href="common.html">Common Scripts</a>
+<a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
 <a href="updates.html">Updates</a>
 <a href="about.html">About</a>
 <a href="https://docs.cyberark.com" rel="noopener" target="_blank">Docs</a>
@@ -63,7 +63,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts</a>
+      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
