--- a/install.html
+++ b/install.html
@@ -67,7 +67,7 @@
 <a href="install.html">Install</a>
 <a href="commands.html">Commands</a>
 <a href="scriptbuilder.html">ScriptBuilder</a>
-<a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+<a href="common.html">Common Scripts</a>
 <a href="updates.html">Updates</a>
 <a href="about.html">About</a>
 <a href="https://docs.cyberark.com" rel="noopener" target="_blank">Docs</a>
@@ -81,7 +81,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
@@ -219,7 +219,7 @@
 				 2-2zm0 2v.01L12 13 20 6.01V6H4zm0 
 				 12h16V8l-8 7-8-7v10z"></path>
 </svg>
-	  Contact Me
+	  vpasmodule@gmail.com
 	</a>
 </div><br/><div class="faq-wrap"><h3 style="margin:8px 0 6px">FAQs</h3>
 <p class="muted"><b>*Please note:</b> The FAQs below are suggestions and should be carefully reviewed before running any commands. If you are on a corporate or managed machine, always confirm with your organization’s security policies before making changes.</p>
