--- a/updates.html
+++ b/updates.html
@@ -37,7 +37,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a class="active" href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
@@ -51,7 +51,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
