--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a class="active" href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
@@ -73,7 +73,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
@@ -151,12 +151,12 @@
 				  </div>
 				  <div style="display:flex;gap:8px;flex-wrap:wrap;">
 					<a class="btn btn-chip" href="mailto:vpasmodule@gmail.com">
-					<svg fill="currentColor" height="" style="margin-right:6px;vertical-align:middle;" viewbox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
+					<svg fill="currentColor" height="16" style="margin-right:6px;vertical-align:middle;" viewbox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
 						<path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 
 										 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 
 										 2-2zm0 2v.01L12 13 20 6.01V6H4zm0 
 										 12h16V8l-8 7-8-7v10z"></path>
-						</svg>Email Me</a>
+						</svg>vpasmodule@gmail.com</a>
 					<a class="btn btn-chip" href="https://github.com/vmelamed5/VpasModule/issues" target="_blank" rel="noopener">
 					<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.29 9.41 7.86 10.94.58.11.79-.25.79-.56v-2.02c-3.2.7-3.87-1.39-3.87-1.39-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.77 2.72 1.26 3.38.96.1-.76.41-1.26.74-1.55-2.55-.29-5.23-1.28-5.23-5.69 0-1.26.45-2.3 1.19-3.12-.12-.29-.52-1.45.11-3.01 0 0 .97-.31 3.19 1.19a11.1 11.1 0 0 1 5.8 0c2.22-1.5 3.18-1.19 3.18-1.19.64 1.56.24 2.72.12 3.01.74.82 1.19 1.86 1.19 3.12 0 4.42-2.69 5.39-5.25 5.67.42.36.79 1.08.79 2.19v3.24c0 .31.21.68.8.56A10.96 10.96 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z"/></svg>
 					Open an Issue</a>
