--- a/scriptbuilder.html
+++ b/scriptbuilder.html
@@ -372,7 +372,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a class="active" href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" rel="noopener" target="_blank">Docs</a>
@@ -387,7 +387,7 @@
       <a href="install.html">Install</a>
       <a href="commands.html">Commands</a>
       <a href="scriptbuilder.html">ScriptBuilder</a>
-      <a href="common.html">Common Scripts <small><small>(coming soon)</small></small></a>
+      <a href="common.html">Common Scripts</a>
       <a href="updates.html">Updates</a>
       <a href="about.html">About</a>
       <a href="https://docs.cyberark.com" target="_blank" rel="noopener">Docs</a>
